# otel_02EK

./: CMakeLists.txt  partitions.csv
components/: CMakeLists.txt
data/: config - Kopya.json  config.json  config_lord.json  index.html  location.json  main1.css  main2.css  setup.html  upload.html
main/: idf_component.yml  main.cpp
main/tool/: config.cpp  tool.cpp
